# maui-core

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-deb-amd64.yml
audio/src/code/qml/: plugin.h
build.7/: CMakeCache.txt  build.ninja  cmake_install.cmake  ecm_uninstall.cmake
build.7/.qt/: QtDeploySupport.cmake
build.7/libs/: CTestTestfile.cmake  MauiCoreConfig.cmake  cmake_install.cmake  mauicore_version.h  prefix.sh
build.7/libs/audio/: CTestTestfile.cmake  MauiCoreAudioConfig.cmake  cmake_install.cmake  mauicoreaudio_version.h
build.7/libs/audio/src/: CTestTestfile.cmake  MauiCoreAudio_qmldir  audio_export.h  cmake_install.cmake  config.h
build.7/libs/notifications/: CTestTestfile.cmake  MauiCoreNotificationsConfig.cmake  cmake_install.cmake  mauicorenotifications_version.h
build.7/libs/notifications/src/: CTestTestfile.cmake  MauiCoreNotifications_qmldir  cmake_install.cmake  moc_notifications_adaptor.cpp_parameters  moc_notifications_interface.cpp_parameters  notifications_export.h
build.7/libs/power/: CTestTestfile.cmake  MauiCorePowerConfig.cmake  MauiCorePowerConfigVersion.cmake  cmake_install.cmake  mauicorepower_version.h
build.7/libs/power/src/: CTestTestfile.cmake  MauiCorePower_qmldir  cmake_install.cmake  power_export.h
libs/: CMakeLists.txt  MauiCoreConfig.cmake.in
libs/audio/: CMakeLists.txt  MauiCoreAudioConfig.cmake.in
libs/audio/src/: CMakeLists.txt
libs/audio/src/code/: context.cpp  debug.cpp
libs/audio/src/code/qml/: plugin.cpp  plugin.h
libs/audio/src/controls/: qmldir
libs/network/: CMakeLists.txt  MauiCoreNetworkConfig.cmake.in  README.md
libs/notifications/: CMakeLists.txt  MauiCoreNotificationsConfig.cmake.in
libs/notifications/src/: CMakeLists.txt
libs/notifications/src/code/: datehelper.cpp  datehelper.h  historymodel.cpp  historymodel.h  notification.h  notificationimagesstorage.h  notifications.h  notifications_plugin.h  notificationserver.cpp  notificationserver.h  notificationsimageprovider.cpp  notificationsimageprovider.h  notificationsimageutils.h  notificationsmodel.cpp  notificationsmodel.h  plugin.cpp
libs/notifications/src/controls/: qmldir
libs/power/: CMakeLists.txt  MauiCorePowerConfig.cmake.in
libs/power/src/: CMakeLists.txt
libs/power/src/code/: batteryinfo.cpp  batteryinfo.h  brightnesscontrol.cpp  brightnesscontrol.h  caskpowerplugin.cpp  caskpowerplugin.h  inhibitioncontrol.h  powermanagementengine.cpp  powermanagementjob.cpp  powerprofile.cpp  powerprofile.h
libs/power/src/controls/: qmldir
scripts/: build-deb.sh  install-build-deps.sh
